[package]
name = "github-api"
description = "Github v3 API bindings for Rust"
version = "0.4.2"
authors = ["joseph.lenton@askattest.com <joseph.lenton@askattest.com>"]
repository = "https://github.com/JosephLenton/github-api"
license = "MIT"

[dependencies]
burgundy = "0.3.3"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.19"
base64 = "0.9.3"
lazy_static = "1.1.0"

